# django-social-network

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  prestart.sh  pyproject.toml  ход работы.md
friznet/config/: asgi.py  settings.py  urls.py  wsgi.py
friznet/src/: routers.py
friznet/src/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
