[tool.poetry]
name = "django-social-network"
version = "0.1.0"
description = "Social Network by Django"
authors = ["Victor Dzeba <frizmob@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
Pillow = "^9.1.1"
psycopg2 = "^2.9.3"
djoser = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
